--- a/tubes/about_us.html
+++ b/tubes/about_us.html
@@ -166,18 +166,7 @@
 								</div>
   							</div>
   						</div>
-  						<div class="col-sm-3">
-  							<div class="team-member"><img src="img/tim2.jpg" alt="">
-  								<div class="team-name"><h5>Asep Aris Wahyu<br>6306120088</h5>
-								<p><font color="black"> - unknown</font></p>
-
-  								</div>
-  								<div class="team-social">
-								<a href="#"><i class="fa fa-facebook"></i></a>
-								</div>
-  							</div>
-  						</div>
-  						<div class="col-sm-3">
+  						class="col-sm-3">
   							<div class="team-member"><img src="img/tim3.jpg" alt="">
   								<div class="team-name"><h5>Mochamad Shiddiq Arifin<br>6306130057</h5>
 								<p><font color="black"> - unknown</font></p>
