--- a/tubes/about_us.html
+++ b/tubes/about_us.html
@@ -158,7 +158,7 @@
   						<div class="col-sm-3">
   							<div class="team-member"><img src="img/tim1.jpg" alt="">
   								<div class="team-name"><h5>Putri Ralina Ginting<br>6706154147</h5>
-								<p><font color="black"> - Programmer</font></p>
+								<p><font color="black"> - Programmer Website</font></p>
 
   								</div>
   								<div class="team-social">
@@ -169,7 +169,7 @@
   						class="col-sm-3">
   							<div class="team-member"><img src="img/tim3.jpg" alt="">
   								<div class="team-name"><h5>Mochamad Shiddiq Arifin<br>6306130057</h5>
-								<p><font color="black"> - unknown</font></p>
+								<p><font color="black"> - Database</font></p>
 
   								</div>
   								<div class="team-social">
